# mksaas_command

./: .gitignore  README.md  REQUIREMENTS.md  build.config.json  build.sh  install.sh  main.sh  mksaas-bootstrap.sh  pyproject.toml  uninstall.sh
docs/: REQUIREMENTS.md  build_install_upgrade_uninstall.md  env-schema.yaml  setup-state.example.json
mksaas/: __init__.py  __main__.py  _version.py  cli.py  console.py  env-schema.yaml  env_writer.py  gitops.py  groups.py  masking.py  paths.py  prompts.py  repo_url.py  schema.py  secrets_gen.py  state.py  version.py
r/: .gitignore
scripts/: 00-project-create.sh  10-clone-template.sh  100-email-resend.sh  101-newsletter-setup.sh  102-email-setup.sh  110-payment-stripe.sh  111-payment-creem.sh  112-payment-setup.sh  120-notification-setup.sh  130-credits-setup.sh  140-analytics-setup.sh  150-affiliates-setup.sh  20-prepare-env.sh  21-env-setup.sh  22-env-migrate-secrets.sh  30-github-create-push.sh  40-print-hints.sh  50-cloudflare-r2.sh  60-cloudflare-turnstile.sh  70-database-neon.sh  71-database-supabase.sh  72-database-local-postgres.sh  80-deploy-vercel.sh  81-deploy-cloudflare-pg.sh  82-deploy-cloudflare-d1.sh  90-auth-github.sh  91-auth-google.sh  lib.sh
tests/: test_apply.py  test_build_script.py  test_cli_dispatch.py  test_console.py  test_env_command.py  test_env_writer.py  test_groups.py  test_init.py  test_install_script.py  test_masking.py  test_project.py  test_prompts.py  test_repo_url.py  test_schema.py  test_secrets_gen.py  test_state.py  test_uninstall.py  test_upgrade.py  test_version.py  (+1 more)
(+44 files in other folders)
